# flipflops

./: .gitignore  README.md  flipflops.qrc  main.py  pyproject.toml  pysidedeploy.spec
flipflops/: bad_apple.py  console.py  display.py  instructions.py  paint.py  randomize.py  snake_game.py  tool_bar.py  video_player.py
resources/: bad_apple.json  flipflops.icns  instructions.html
scripts/: deploy.py  patch.py
